removed album url from img component, fixed css so that comma is visible between artists

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -27,8 +27,13 @@ code {
 .artists {
   border: 1px solid red;
 }
-.artist a {
+
+.artist {
   color: white;
+
+}
+.artist a {
+  color: inherit;
   text-decoration: none;
 }
 .album-link {
